# hyper-ssm-ultimate

./: .gitignore  HONEST_ASSESSMENT.md  HYPER_SSM_2026_ULTIMATE.md  IMPLEMENTATION_2026.md  LICENSE  README.md  analyze_self_improvement_trajectory.py  benchmark_compressor.py  compile_cuda.py  debug_train_error.txt  direct2_out.txt  direct_comp_out.txt  direct_comp_test.py  distill_run.py  eval_baseline.py  eval_long_context.py  full_pinnacle_val.py  full_val_out.txt  full_val_result.txt  generate_c.py  generate_research_figures.py  generate_text.py  inference.py  inference_live.py  loss.py  model.py  pinnacle_validate.py  pinnacle_validate_out.txt  pitch_deck.md  requirements.txt  research_paper.md  results_baseline.json  results_c_training.json  results_long_context.json  run_self_improvement_loop.py  self_improvement_trajectory.json  test_hybrid_ultimate.py  test_model.py  test_tokenizer.py  train.py  (+9 more)
data/: prepare_c_corpus.py
docs/: PAPER_POSITIONING_2026.md
eval/: honest_benchmarks.py
examples/: production_usage.py
hyper_ssm/: __init__.py  audio_topology.py  cuda_ops.py  custom_tokenizer.py  data_loader.py  hybrid_attention.py  hyperbolic_loss.py  hyperbolic_ops.py  liquid_weights.py  model.py  tiled_compressor.py  tokenizer.py  vision_topology.py
hyper_ssm/csrc/: riemannian.cpp  riemannian_kernel.cu
legacy/: README.md
logs/: None_manifest.json
project-aether/: DELIVERABLES_SUMMARY.md
project-aether/src/aether/self_improvement/: __init__.py  engine.py
rust_kernels/: Cargo.toml  README.md
rust_kernels/src/: compressor.rs  hyperbolic_ops.rs  kernels.rs  lib.rs  main.rs
tokenizer_cache/: test_merges.txt  test_special.json
training/: train_hybrid_ultimate.py
